--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "strapi-provider-upload-aws-s3-opt",
-  "version": "3.0.0-beta.16.8",
-  "description": "strapi-provider-upload-aws-s3 with optimized images using sharp",
+  "name": "strapi-provider-upload-aws-s3-optimized",
+  "version": "1.0.0",
+  "description": "Strapi AWS S3 image provider that generates 3 additional image sizes. In addition to the sizes it optimize the images and creates a WebP for each size.",
   "license": "ISC",
   "homepage": "http://strapi.io",
   "keywords": [
