--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strapi-provider-upload-aws-s3-optimized",
-  "version": "1.0.5",
-  "description": "Strapi AWS S3 image provider that generates 3 additional image sizes. In addition to the sizes it optimize the images and creates a WebP for each size.",
+  "version": "1.0.6",
+  "description": "Strapi AWS S3 Provider that also generates 3 additional image sizes and WebP images for each size.  The additional images are all created & optimized with Sharp.js",
   "license": "ISC",
   "homepage": "http://strapi.io",
   "keywords": [
