--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "strapi-provider-upload-s3-optimized",
-  "version": "3.0.0-beta.16.9.1",
+  "version": "3.0.0-beta.17.5",
   "description": "Strapi S3 Provider that supports any endpoint and generates optimized additional image sizes & WebP's.",
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "http://strapi.io",
   "keywords": [
     "upload",
@@ -15,8 +15,8 @@
   },
   "main": "./lib",
   "dependencies": {
-    "aws-sdk": "^2.543.0",
-    "sharp": "^0.23.1"
+    "aws-sdk": "^2.573.0",
+    "sharp": "^0.23.2"
   },
   "strapi": {
     "isProvider": true
@@ -32,6 +32,5 @@
   "engines": {
     "node": ">= 10.0.0",
     "npm": ">= 6.0.0"
-  },
-  "license": "MIT"
+  }
 }
